--- a/examples/manual.html
+++ b/examples/manual.html
@@ -14,7 +14,7 @@
 	camera.position.z = 3;
 
 	//////////////////////////////////////////////////////////////////////////////////
-	//		comment								//
+	//		set 3 point lighting						//
 	//////////////////////////////////////////////////////////////////////////////////
 
 	;(function(){
